Fix issue with view profile modal being overlapped with chat component

--- a/in-sync-frontend/src/common/ViewProfile.module.css
+++ b/in-sync-frontend/src/common/ViewProfile.module.css
@@ -3,3 +3,15 @@
     background-color: #212121;
     color: #fff;
 }
+
+.appModal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 500px;
+    position: fixed;
+    margin-top: 50px;
+    margin-left: calc(50% - 250px);
+    padding: 15px 15px 15px 15px;
+}
+
